# imaglee_online

./: .gitignore  docker-compose.yml
backend/eshop/: Dockerfile  medusa-config.js  package.json
backend/imaglee/: .dockerignore  Dockerfile  gunicorn.conf.py  manage.py  pyproject.toml
backend/imaglee/app_my_imaglee/: apps.py
backend/imaglee/app_wagtail/: Dockerfile  models.py  views.py  wsgi.py
backend/imaglee/app_wagtail/templates/: base.html
backend/imaglee/app_workshops/: apps.py
backend/imaglee/backend_venv/: pyvenv.cfg
backend/imaglee/imaglee/: asgi.py  graphql_schema.py  main_schema.py  routers.py  settings.py  urls.py  wsgi.py
frontend/imaglee-app/: Dockerfile  README.md  package.json
frontend/imaglee-app/src/: apollo-client.js  auth.js
nginx/: Dockerfile
postgresql/: pg_hba.conf  postgresql.conf
